SF Primes/src/objects/Job_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finish_Email__c</fullName>
        <label>Finish E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finish_Emails__c</fullName>
        <label>Finish E-mails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <label>Batch/Job Settings</label>
</CustomObject>